Lower required java version to 8