@@ -57,7 +57,7 @@ public class HumanReadableBytes {
     ) {
         String separator = space ? " " : "";
         if (-1000 < bytes && bytes < 1000) {
-            return "%d%sB".formatted(bytes, separator);
+            return String.format("%d%sB", bytes, separator);
         }
         CharacterIterator ci = new StringCharacterIterator("kMGTPE");
         while (bytes <= -999_950 || bytes >= 999_950) {
@@ -66,7 +66,7 @@ public class HumanReadableBytes {
         }
 
         String formatString = "%s%s%cB";
-        return formatString.formatted(rounded(bytes / 1000.0, decimalPlaces), separator, ci.current());
+        return String.format(formatString, rounded(bytes / 1000.0, decimalPlaces), separator, ci.current());
     }
 
     /**
@@ -113,7 +113,7 @@ public class HumanReadableBytes {
     ) {
         String separator = space ? " " : "";
         if (-1024 < bytes && bytes < 1024) {
-            return "%d%sB".formatted(bytes, separator);
+            return String.format("%d%sB", bytes, separator);
         }
         CharacterIterator ci = new StringCharacterIterator("KMGTPE");
         while (bytes <= -1_048_576 || bytes >= 1_048_576 /* 1024 * 1024 */) {
@@ -122,16 +122,16 @@ public class HumanReadableBytes {
         }
 
         String formatString = "%s%s%ciB";
-        return formatString.formatted(rounded(bytes / 1024.0, decimalPlaces), separator, ci.current());
+        return String.format(formatString, rounded(bytes / 1024.0, decimalPlaces), separator, ci.current());
     }
 
     private static String rounded(
             double bytes,
             int decimalPlaces
     ) {
-        if (decimalPlaces == 0) return "%.0f".formatted(bytes);
+        if (decimalPlaces == 0) return String.format("%.0f", bytes);
 
-        DecimalFormat df = new DecimalFormat("0." + "#".repeat(decimalPlaces));
+        DecimalFormat df = new DecimalFormat("0." + new String(new char[decimalPlaces]).replace("\0", "#"));
         df.setRoundingMode(RoundingMode.HALF_UP);
         return df.format(bytes);
     }
